# inco-confidential-swap-

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
contracts/: ConfidentialETH.sol  ConfidentialSwap.sol  ConfidentialSwapV2.sol  ConfidentialUSDC.sol  MockUSDC.sol
frontend/: package-lock.json  package.json
frontend/src/: contracts.ts  crosschain-config.ts
frontend/src/app/: page.tsx  providers.tsx
frontend/src/app/solana-swap/: page.tsx
frontend/src/components/: BridgeTab.tsx
frontend/src/hooks/: useCrossChainSwap.ts  useRelayBridge.ts
frontend/src/providers/: SolanaProvider.tsx
ignition/modules/: ConfidentialSwap.ts  ConfidentialSwapFull.ts  ConfidentialSwapV2.ts  FullSwapDeploy.ts
programs/inco-token/: Cargo.toml
programs/inco-token/src/: lib.rs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/scripts/: setup-solana.ts  setup-usdc-vault.ts  solana-config.json
sdk/src/: IncoEncryption.ts  PrivateAmmClient.ts  constants.ts  index.ts
solana/: Anchor.toml  package-lock.json  tsconfig.json
solana/programs/inco-token/: Cargo.toml
solana/programs/inco-token/src/: lib.rs
solana/programs/private-amm/: Cargo.toml
solana/programs/private-amm/src/: lib.rs
solana/scripts/: deploy.ts  init-sol-vault.ts  mint-and-send.ts
solana/tests/: inco-token.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/types/: global.d.ts
