[package]
name = "private-amm"
version = "0.1.0"
description = "Fully Private AMM using Inco FHE - Encrypted swaps, reserves, and LP tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
inco-lightning = { version = "0.1.4", features = ["cpi"] }
